# daim

./: .cproject  .gitignore  .hgignore  .project  HOWTO-BUILD  Makefile  build.mk  configure  configure.in  daim-setup.sh
cci/: Makefile  cciCOM.h  cciPrivate.h
cci/base/: Makefile  cciICategoryManager.idl  cciIFactory.idl  cciIStringEnumerator.idl  cciIStringIterator.idl  cciIStringWriter.idl  ccirootidl.idl  xpidl_debug
cci/bridge/: Makefile
cci/ccireg/: Makefile  ccireg.cpp  cciregister
cci/components/: Makefile  cciAllocatorImpl.cpp  cciAllocatorImpl.h  cciCOMInit.cpp  cciCategoryManager.cpp  cciCategoryManager.h  cciComponentManager.cpp  cciComponentManager.h  cciGenericFactory.cpp  cciGenericFactory.h  cciManifestReader.h  cciMemoryImpl.cpp  cciNativeModuleLoader.cpp  cciNativeModuleLoader.h  cciStaticModuleLoader.cpp  cciStaticModuleLoader.h  cciString.cpp
cci/glue/: CCI_COM.readme  Makefile  cciAggregated.h  cciCOMGlue.cpp  cciCOMPtr.cpp  cciCOMPtr.h  cciComponentGlue.cpp  cciComponentManagerUtils.cpp  cciComponentManagerUtils.h  cciCore.h  cciDebug.h  cciEnumeratorUtils.cpp  cciEnumeratorUtils.h  cciErrors.h  cciIAllocator.h  cciIGenericFactory.h  cciISupportsBase.h  cciIWeakReferenceUtils.h  cciId.cpp  cciId.h  cciInterfaceRequestorUtils.cpp  cciInterfaceRequestorUtils.h  cciMemory.h  cciNativeWrapper.h  cciPrivateHook.h  cciServiceManagerUtils.h  cciString.h  cciStubs.cpp  cciStubs.h  cciSupportsImpl.cpp  cciSupportsImpl.h  cciSupportsUtils.h  cciWeakReference.cpp  cciWeakReference.h
cci/idl-parser/: header.py  xpidl.py
cci/io/: Makefile  cciFileStreams.cpp  cciIFileStreams.idl  cciIMemoryInputStream.idl  cciMemoryInputStream.cpp  cciMemoryInputStream.h
cci/xpcom/: Makefile  cciIXPCOMSupports.idl
config/: Makefile  Makefile.darwin-clang.mk  Makefile.darwin-gcc.mk  Makefile.gcc.mk  Makefile.msvc.mk  config.mk  config.opt.in  idl.mk  packager.mk  rules.mk  setup.mk
contrib/include/: daim_embed.h  levmar.h  loess.h
contrib/sources/: Makefile
daim/: Makefile
daim/components/: Makefile
daim/glue/: Makefile  cciDaimGlue.cpp  cciDaimGlue.h
daim/public/: Makefile  cciDaimCID.h  cciIColorTable.idl  cciIDaimService.idl  cciIDrawable.idl  cciIFilterContext.idl  cciIImage.idl  cciIImageContainer.idl  cciIImageFilter.idl  cciIImageList.idl  cciIImageListContainer.h  cciIImageListImage.idl  cciIImageShell.idl  cciIKernelFamily.idl  cciIKernelService.idl  cciIMatrix.idl  cciIMetaDataContainer.idl  cciIMetaDataProvider.idl  cciIRegion.idl  cciIRegionContainer.idl  cciIScriptableMetaDataContainer.idl  cciIStorageImage.idl  cciISurface.idl  cciKernelServiceUtils.h  ccidaim.idl
daim/src/: Makefile  cciDaimModule.cpp  cciDaimModule.h  cciDaimService.cpp  cciDaimService.h  cciFilterContext.cpp  cciFilterContext.h  cciImageContainerUtils.h  cciImageList.cpp  cciImageList.h  cciImageListImage.cpp  cciImageListImage.h  cciImageShell.cpp  cciImageShell.h  cciImageUtils.cpp  cciImageUtils.h  cciMatrix.cpp  cciScriptableImage.cpp  cciScriptableImage.h  cciScriptableRegion.cpp  cciScriptableRegion.h  cciStorageImage.cpp  cciStorageImage.h  daim.cpp
daim/tests/: Makefile
daim/xpcom/: Makefile
daim_kernel/: Makefile
daim_kernel/include/: Makefile  daim_kernel.h  dmCoordinatesTypes.h  dmImageData.h  dmKernelBase.h  dmOperators.h  dmPixelFormats.h  dmRGBColor.h
daim_kernel/source/: dmKernelBase.cpp
daim_libkernel/: Makefile
daim_matrix/: Makefile
daim_matrix/include/: dmComplex.h  dmMatrix.h  dmMatrixArray.h  dmMatrixBase.h  (+18 more)
daim_utilities/: Makefile
data/: Balls.xml  Edges.xml  LowPass.xml  Morpho2.xml  Morpho4c.xml  Morpho8c-2.xml  Morpho8c.xml  build.xml
doc/: Makefile
etc/: config.xml  kernels.ini
include/: Makefile  daim.h  daim_config.h  daim_prolog.h
tiers/: Makefile  build.mk
utils/: Makefile
(+861 files in other folders)
